add: test_alumnos_blueprint.py update: conftest.py, base.html

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,6 +11,7 @@
 
 <body>
     <!-- MENSAJES FLASH -->
+    {% if flask_categories %}
     {% for category, alert_class in flash_categories.items() %}
     {% with messages = get_flashed_messages(category_filter=[category]) %}
     {% if messages %}
@@ -20,6 +21,7 @@
     {% endif %}
     {% endwith %}
     {% endfor %}
+    {% endif %}
 
     {% block body %}
     {% endblock %}
