fix: flash categories in base.html

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,7 @@
 
 <body>
     <!-- MENSAJES FLASH -->
-    {% if flask_categories %}
+    {% if flash_categories %}
     {% for category, alert_class in flash_categories.items() %}
     {% with messages = get_flashed_messages(category_filter=[category]) %}
     {% if messages %}
