--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,8 @@
     <title>{% block title %}{% endblock %}</title>
     <!-- FAVICON -->
     <link rel="icon" href="{{url_for('static', filename='img/favicon.ico')}}" type="image/x-icon">
+    <!-- CSS -->
+     <link rel="stylesheet" href="{{url_for('static', filename='css/style.min.css')}}">
 </head>
 
 <body>
