Actualización de compilación de css
update: _variables.scss, base.html, home.html
add: scss/base, scss/pages, _alerts.scss, _layout.scss, _tables.scss
delete: style.scss, style.min.css

--- a/app/templates/alumnos/home.html
+++ b/app/templates/alumnos/home.html
@@ -8,6 +8,11 @@
 <!-- TÍTULO -->
 {% block title %}Home | Alumnos{% endblock %}
 
+<!-- CSS -->
+{% block css %}
+<link rel="stylesheet" href="{{url_for('static', filename='css/home_alumnos.min.css')}}">
+{% endblock %}
+
 <!-- BODY -->
 {% block body %}
 <header>
