--- a/frontend/scss/base/_variables.scss
+++ b/frontend/scss/base/_variables.scss
@@ -1,6 +1,7 @@
-// Colores base
-$primary-color: #005bff;
+// Colores
+$primary-color: #007bff;
 $secondary-color: #6c757d;
+$error-color: #dc3545;
 $table-border: #ddd;
 $background: #f8f9fa;
 
