--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,7 +8,7 @@
     <!-- FAVICON -->
     <link rel="icon" href="{{url_for('static', filename='img/favicon.ico')}}" type="image/x-icon">
     <!-- CSS -->
-     <link rel="stylesheet" href="{{url_for('static', filename='css/style.min.css')}}">
+    {% block css %}{% endblock %}
 </head>
 
 <body>
