integración de iconos

--- a/app/templates/alumnos/registrar.html
+++ b/app/templates/alumnos/registrar.html
@@ -20,6 +20,10 @@
 
 <h1>REGISTRAR - ALUMNO</h1>
 
+<svg class="icon" width="10px" height="10px">
+    <use xlink:href="{{ url_for('static', filename='icons/sprite.svg') }}#arrow-down"></use>
+</svg>
+
 <form method="post">
     {{form.hidden_tag() }}
 
