--- a/app/templates/alumnos/home.html
+++ b/app/templates/alumnos/home.html
@@ -16,9 +16,9 @@
 <!-- BODY -->
 {% block body %}
 <header>
-    <h1 class="page-title">Gestión de Alumnos</h1>
+    <h1 class="page-title">{{_("Gestión de Alumnos")}}</h1>
     <nav class="actions">
-        <a href="{{ url_for('alumnos.registrar_alumno') }}" class="btn btn-primary">Registrar Alumno</a>
+        <a href="{{ url_for('alumnos.registrar_alumno') }}" class="btn btn-primary">{{_("Registrar Alumno")}}</a>
     </nav>
 </header>
 
@@ -29,8 +29,8 @@
             <thead>
                 <tr>
                     <th>ID</th>
-                    <th>Nombres</th>
-                    <th>Apellidos</th>
+                    <th>{{_("Nombres")}}</th>
+                    <th>{{_("Apellidos")}}</th>
                 </tr>
             </thead>
             <tbody>
@@ -46,28 +46,27 @@
     </section>
     {% else %}
     <section class="empty-state">
-        <p>No hay alumnos registrados</p>
+        <p>{{_("No hay alumnos registrados")}}</p>
     </section>
     {% endif %}
 
     <!-- Botón para abrir modal -->
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#miModal">
-        Abrir Modal
-    </button>
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#miModal">{{_("Abrir
+        Modal")}}</button>
 
     <!-- Modal -->
     <div class="modal fade" id="miModal" tabindex="-1" aria-labelledby="miModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="miModalLabel">¡Funciona Bootstrap JS!</h5>
+                    <h5 class="modal-title" id="miModalLabel">{{_("¡Funciona Bootstrap JS!")}}</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
                 </div>
                 <div class="modal-body">
-                    Si ves este modal, tu Bootstrap JS está funcionando correctamente 🎉
+                    {{_("Si ves este modal, tu Bootstrap JS está funcionando correctamente 🎉")}}
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{_("Cerrar")}}</button>
                 </div>
             </div>
         </div>
