traducciones en inglés

--- a/app/templates/alumnos/home.html
+++ b/app/templates/alumnos/home.html
@@ -6,7 +6,7 @@
 } %}
 
 <!-- TÍTULO -->
-{% block title %}Home | Alumnos{% endblock %}
+{% block title %}{{_("Home | Alumnos")}}{% endblock %}
 
 <!-- CSS -->
 {% block css %}
